# capture-screenshot

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml
src/: capture_list.csv  example_list.csv  main.py
stubs/webdriver_manager/: chrome.pyi  firefox.pyi  microsoft.pyi  opera.pyi
stubs/webdriver_manager/core/: archive.pyi  config.pyi  constants.pyi  download_manager.pyi  driver.pyi  driver_cache.pyi  http.pyi  logger.pyi  manager.pyi  utils.pyi
stubs/webdriver_manager/drivers/: chrome.pyi  edge.pyi  firefox.pyi  ie.pyi  opera.pyi
