[tool.poetry]
name = "capture-screenshot"
version = "0.2.0"
description = "python, selenium을 이용한 페이지 캡처 프로그램"
authors = ["Hyeonjong <nianelo4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
