[tool.poetry]
name = "capture-screenshot"
version = "0.2.0"
description = "python, selenium을 이용한 페이지 캡처 프로그램"
authors = ["Hyeonjong <nianelo4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.5.0"
webdriver-manager = "^3.8.4"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
